--- a/crates/rocker/Cargo.toml
+++ b/crates/rocker/Cargo.toml
@@ -11,10 +11,12 @@ crate-type = ["dylib"]
 
 [dependencies]
 lazy_static = "1.4.0"
-rustler = "0.21.0"
+rustler = "0.26.0"
 # rocksdb = { git = "https://github.com/Elzor/rust-rocksdb.git", branch = "stable_6.7.3" }
 
 [dependencies.rocksdb]
-version = "0.14"
+# version = "0.19.0"
+git = "https://github.com/seanhinde/rust-rocksdb.git"
+branch = "remove-iterator-lifetimes"
 default-features = false
 features = ["lz4"]
